--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
   <name>petclinic</name>
 
   <properties>
-
+   <sonar.organization>agentbenom00</sonar.organization>
+   <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     <!-- Generic properties -->
     <java.version>1.8</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
